--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ venv.bak/
 .env
 .env.local
 .env.*.local
+.env.production
+.env.development
+.env.test
 
 # IDE
 .vscode/
@@ -23,6 +26,7 @@ venv.bak/
 *.swo
 *~
 .DS_Store
+*.sublime-*
 
 # Build outputs
 dist/
@@ -48,10 +52,58 @@ db.sqlite3-journal
 .coverage
 htmlcov/
 .tox/
+.npm/
+.eslintcache
 
 # Misc
 *.log
 logs/
 temp/
 tmp/
+
+# API Keys and Credentials
+credentials.json
+service-account-key.json
+*.pem
+*.key
+*.crt
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Docker
+.dockerignore
+docker-compose.override.yml
+
+# OS generated files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Python
+*.egg
+*.egg-info/
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Node.js
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Uploads and user content
+uploads/
+user-content/
+
+# Cache
+.cache/
+.parcel-cache/
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 
